--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -1,5 +1,5 @@
 baseURL = "https://www.example.com"
-title = "数学と哲学"
+title = "HugoTeX"
 paginate = 3
 languageCode = "en"
 DefaultContentLanguage = "en"
@@ -7,8 +7,8 @@ enableInlineShortcodes = true
 footnoteReturnLinkContents = "^"
 
 [author]
-  name = "Abdulai Gassama"
-  abstract = "This is my personal website"
+  name = "Kaito Sugimoto"
+  abstract = "I'm a software engineer and a coffee enthusiast in Japan. My primary interest lies in the area of natural language processing."
 
 [taxonomies]
 category = "categories"
