--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://thirsty-clarke-a59631.netlify.app/"
+baseURL = "https://competent-brahmagupta-5ea822.netlify.app"
 title = "数学と哲学"
 paginate = 3
 languageCode = "en"
